update conversion notes

--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
@@ -38,6 +38,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Peter Petersen, one of the members of the Buzsaki lab, has shared with us the following documents that contain the structure of the cell explorer format:\n",
+    "\n",
+    "* [new format](https://cellexplorer.org/data-structure/)\n",
+    "* [old format](https://github.com/buzsakilab/buzcode/wiki/Data-Formatting-Standards)\n",
+    "\n",
+    "He referred to the old format as buzcode.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -100,7 +113,10 @@
     "* `cell_metrics.cellinfo`\n",
     "* `spikes.cellinfo`\n",
     "\n",
-    "This is done below.\n"
+    "This is done below.\n",
+    "\n",
+    "Apparently, mono_res means Monosynaptic connections.\n",
+    "\n"
    ]
   },
   {
@@ -483,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are some time series here but no information about the channels as I was expeting."
+    "There are some time series here but no information about the channels as I was expecting."
    ]
   },
   {
@@ -562,15 +578,10 @@
      ]
     },
     {
-     "ename": "AssertionError",
-     "evalue": "No e13_16f1_210302.sessionInfo.mat file found in the folder!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mspikeinterface\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mextractors\u001b[39;00m \u001b[39mimport\u001b[39;00m CellExplorerSortingExtractor\n\u001b[1;32m      3\u001b[0m file_path \u001b[39m=\u001b[39m session_files_path_list[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mparent \u001b[39m/\u001b[39m \u001b[39m\"\u001b[39m\u001b[39me13_16f1_210302.spikes.cellinfo.mat\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m extractor \u001b[39m=\u001b[39m CellExplorerSortingExtractor(file_path)\n",
-      "File \u001b[0;32m~/development/spikeinterface/src/spikeinterface/extractors/cellexplorersortingextractor.py:54\u001b[0m, in \u001b[0;36mCellExplorerSortingExtractor.__init__\u001b[0;34m(self, spikes_matfile_path, session_info_matfile_path, sampling_frequency)\u001b[0m\n\u001b[1;32m     52\u001b[0m     session_info_matfile_path \u001b[39m=\u001b[39m folder_path \u001b[39m/\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msorting_id\u001b[39m}\u001b[39;00m\u001b[39m.sessionInfo.mat\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     53\u001b[0m session_info_matfile_path \u001b[39m=\u001b[39m Path(session_info_matfile_path)\n\u001b[0;32m---> 54\u001b[0m \u001b[39massert\u001b[39;00m (\n\u001b[1;32m     55\u001b[0m     (session_info_matfile_path)\u001b[39m.\u001b[39mis_file()\n\u001b[1;32m     56\u001b[0m ), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNo \u001b[39m\u001b[39m{\u001b[39;00msorting_id\u001b[39m}\u001b[39;00m\u001b[39m.sessionInfo.mat file found in the folder!\u001b[39m\u001b[39m\"\u001b[39m \n\u001b[1;32m     58\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     59\u001b[0m     session_info_mat \u001b[39m=\u001b[39m scipy\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mloadmat(file_name\u001b[39m=\u001b[39m\u001b[39mstr\u001b[39m(session_info_matfile_path))\n",
-      "\u001b[0;31mAssertionError\u001b[0m: No e13_16f1_210302.sessionInfo.mat file found in the folder!"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No e13_16f1_210302.sessionInfo.mat file found in the folder!\n"
      ]
     }
    ],
@@ -578,7 +589,10 @@
     "from spikeinterface.extractors import CellExplorerSortingExtractor\n",
     "\n",
     "file_path = session_files_path_list[0].parent / \"e13_16f1_210302.spikes.cellinfo.mat\"\n",
-    "extractor = CellExplorerSortingExtractor(file_path)"
+    "try:\n",
+    "    extractor = CellExplorerSortingExtractor(file_path)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -592,7 +606,7 @@
     "\n",
     "Importantly, the files should contain the fields `UID` and `times` in a field called `spikes`. Let's see if any of the files contain this information and if it is consistent across them\n",
     "\n",
-    "Looking at the files below, they do seem to agree with the basic information. It should be straighforward to role a new sorting extractor for this dataset. Or use NumpySortingExtractor and then add the `sessionInfo` manually. Not sure at this point on what it would be easier. "
+    "After a second look and some comunication with Petersen it seems that we can use the `spikes.cellinfo` file. We can modify the `CellExplorerSortingExtractor` to use this file instead of the `sessionInfo` file to extract sampling rate."
    ]
   },
   {
@@ -613,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,15 +636,26 @@
     "mat_file = loadmat_scipy(file_path, simplify_cells=True)\n",
     "\n",
     "# Output to an external file\n",
-    "with open(json_directory / 'cellinfo.json', 'w') as f:\n",
+    "with open(json_directory / 'spikes.cellinfo.json', 'w') as f:\n",
     "    f.write(json.dumps(build_keys_and_types(mat_file), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ids', 'ts', 'times', 'cluID', 'maxWaveformCh', 'maxWaveformCh1', 'phy_amp', 'total', 'amplitudes', 'basename', 'numcells', 'UID', 'sr', 'shankID', 'rawWaveform', 'filtWaveform', 'rawWaveform_all', 'rawWaveform_std', 'filtWaveform_all', 'filtWaveform_std', 'timeWaveform', 'timeWaveform_all', 'peakVoltage', 'channels_all', 'peakVoltage_sorted', 'maxWaveform_all', 'peakVoltage_expFitLengthConstant', 'processinginfo'])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spikes = mat_file[\"spikes\"]\n",
     "spikes.keys()"
@@ -638,9 +663,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000,\n",
+       " (135,),\n",
+       " (135,),\n",
+       " (135,),\n",
+       " array([1, 2, 3], dtype=uint8),\n",
+       " array([ 119, 1162, 1167], dtype=uint16),\n",
+       " array([ 68.71136667, 255.81043333, 256.2958    ]))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sampling_rate = spikes[\"sr\"]\n",
     "cluster_id = spikes[\"cluID\"]\n",
@@ -660,37 +702,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = session_files_path_list[0].parent / \"e13_16f1_210302.cell_metrics.cellinfo.mat\"\n",
+    "mat_file = loadmat_scipy(file_path, simplify_cells=True)\n",
     "\n",
     "# Ouput to an external file\n",
-    "with open(json_directory / 'cell_metrics.json', 'w') as f:\n",
+    "with open(json_directory / 'cell_metrics.cellinfo.json', 'w') as f:\n",
     "    f.write(json.dumps(build_keys_and_types(mat_file), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None,\n",
+       " (135,),\n",
+       " (135,),\n",
+       " (135,),\n",
+       " array([ 119, 1162, 1167], dtype=uint16),\n",
+       " array([ 119, 1162, 1167], dtype=uint16),\n",
+       " array([ 68.71136667, 255.81043333, 256.2958    ]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "spikes = mat_file[\"spikes\"]\n",
-    "spikes.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sampling_rate = spikes[\"sr\"]\n",
-    "cluster_id = spikes[\"cluID\"]\n",
-    "times = spikes[\"times\"]\n",
-    "unit_ids = spikes[\"UID\"]\n",
+    "times = mat_file[\"cell_metrics\"][\"spikes\"][\"times\"]\n",
+    "unit_ids = mat_file[\"cell_metrics\"][\"UID\"]\n",
+    "unit_ids = mat_file[\"cell_metrics\"][\"cluID\"]\n",
+    "sampling_rate = None \n",
     "\n",
     "sampling_rate, cluster_id.shape, times.shape, unit_ids.shape, unit_ids[:3], cluster_id[:3], times[:3][0][:3]\n"
    ]
@@ -705,11 +755,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = session_files_path_list[0].parent / \"e13_16f1_210302.mono_res.cellinfo.mat\"\n",
+    "mat_file = loadmat_scipy(file_path, simplify_cells=True)\n",
     "\n",
     "# Output to an external file\n",
     "with open(json_directory / 'mono_res.json', 'w') as f:\n",
@@ -718,35 +769,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "spikes = mat_file[\"spikes\"]\n",
-    "spikes.keys()"
+    "This is somet other analysis concerning `Monosynaptic connections.`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using cellexplorer with `spikes.cellinfo.mat`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate = spikes[\"sr\"]\n",
-    "cluster_id = spikes[\"cluID\"]\n",
-    "times = spikes[\"times\"]\n",
-    "unit_ids = spikes[\"UID\"]\n",
+    "from spikeinterface.extractors import CellExplorerSortingExtractor\n",
     "\n",
-    "sampling_rate, cluster_id.shape, times.shape, unit_ids.shape, unit_ids[:3], cluster_id[:3], times[:3][0][:3]\n"
+    "file_path = session_files_path_list[0].parent / \"e13_16f1_210302.spikes.cellinfo.mat\"\n",
+    "\n",
+    "try:\n",
+    "    extractor = CellExplorerSortingExtractor(file_path, sampling_frequency=30_000.0)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([      106,       132,       168, ..., 630229202, 630229228,\n",
+       "         630229390]),\n",
+       "  array([  3,  45,   2, ...,  65, 124,   5], dtype=uint8))]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extractor.get_all_spike_trains()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to extract the sampling rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spikes_matfile_path = file_path\n",
+    "import scipy \n",
+    "import hdf5storage\n",
+    "\n",
+    "try:\n",
+    "    spikes_mat = scipy.io.loadmat(file_name=str(spikes_matfile_path))\n",
+    "    read_spikes_info_with_scipy = True\n",
+    "except NotImplementedError:\n",
+    "    spikes_mat = hdf5storage.loadmat(file_name=str(spikes_matfile_path))\n",
+    "    read_spikes_info_with_scipy = False\n",
+    "cell_info = spikes_mat.get(\"spikes\", np.empty(0))\n",
+    "cell_info_fields = cell_info.dtype.names\n",
+    "\n",
+    "sampling_rate = float(cell_info[\"sr\"][0][0][0][0])"
+   ]
   }
  ],
  "metadata": {
