Update folder instantiation

--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
@@ -71,6 +71,15 @@
    "source": [
     "project_root = Path(\"/Volumes/neurodata/buzaki/HuszarR\")\n",
     "session_path = Path(project_root, \"optotagCA1/e13/e13_16f1/e13_16f1_210302\")\n",
+    "\n",
+    "# Dump to a file in the same folder\n",
+    "json_directory = Path.cwd() / \"_json_files\"\n",
+    "json_directory.mkdir(exist_ok=True)\n",
+    "\n",
+    "# Dump project-wide information into a nested folder\n",
+    "project_json_directory = json_directory / \"project\"\n",
+    "project_json_directory.mkdir(exist_ok=True)\n",
+    "\n",
     "session_files_path_list = list(session_path.iterdir())\n",
     "session_files_path_list"
    ]
@@ -219,9 +228,6 @@
     "result = build_keys_and_types(mat_file)\n",
     "json_output = json.dumps(result, indent=2)\n",
     "\n",
-    "# Dump to a file in the same folder\n",
-    "json_directory = Path.cwd() / \"_json_files\"\n",
-    "json_directory.mkdir(exist_ok=True)\n",
     "with open(json_directory / 'sleep_state_dict.json', 'w') as f:\n",
     "    f.write(json_output)\n",
     "    "
@@ -921,22 +927,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_json_directory = Path.cwd() / \"_json_files\" / \"project\"\n",
-    "project_json_directory.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "structure = count_file_naming_conventions(project_root)\n",
-    "with open(json_directory / 'project' / 'structure.json', 'w') as f:\n",
+    "with open(project_json_directory / 'structure.json', 'w') as f:\n",
     "    f.write(json.dumps(structure, indent=4))"
    ]
   },
@@ -996,7 +992,7 @@
    ],
    "source": [
     "missing = check_missing_files(structure)\n",
-    "with open(json_directory / 'project' / 'missing_files.json', 'w') as f:\n",
+    "with open(project_json_directory / 'missing_files.json', 'w') as f:\n",
     "    f.write(json.dumps(missing, indent=4))"
    ]
   },
@@ -1047,8 +1043,7 @@
    "outputs": [],
    "source": [
     "data = aggregate_data(project_root)\n",
-    "project_data_path = json_directory / 'project' / 'data.json'\n",
-    "with open(project_data_path, 'w') as f:\n",
+    "with open(project_json_directory / 'data.json', 'w') as f:\n",
     "    f.write(json.dumps(data, indent=4))"
    ]
   },
@@ -1066,9 +1061,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_data_path = json_directory / 'project' / 'data.json'\n",
-    "\n",
-    "with open(project_data_path) as user_file:\n",
+    "with open(project_json_directory / 'data.json') as user_file:\n",
     "  file_contents = user_file.read()\n",
     "  \n",
     "project_data_json = json.loads(file_contents)\n"
@@ -1163,7 +1156,7 @@
     "print(project_data_json[first_key].keys())\n",
     "inconsistencies = { key: check_consistency(project_data_json[first_key], check_missing_props) for key, data in project_data_json.items() }\n",
     "\n",
-    "with open(json_directory / 'project' / 'data_inconsistencies.json', 'w') as f:\n",
+    "with open(project_json_directory / 'data_inconsistencies.json', 'w') as f:\n",
     "    f.write(json.dumps( \n",
     "        { key: data for key, data in inconsistencies.items() if len(data) } , indent=4))\n",
     "    "
