more exploration to the notebook

--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
@@ -261,6 +261,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statenames = sleep_state_dict[\"idx\"][\"statenames\"]\n",
+    "timestamps = sleep_state_dict[\"idx\"][\"timestamps\"]\n",
+    "states = sleep_state_dict[\"idx\"][\"states\"]\n",
+    "\n",
+    "states[:5], timestamps[:5], statenames[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wake_state = sleep_state_dict[\"ints\"][\"WAKEstate\"]\n",
+    "wake_state[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states[1803:1810], timestamps[1803:1810]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It apperas to me that the information coincides but the unit of the timestamps are in frames and not in seconds. We need to confirm this.\n",
+    "\n",
+    "Another possibility is that they are seconds. Let's think this through"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamps[-10:]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Last timestamps is 21006 which would indicate that the recording is 21006 seconds long. This is 5.8 hours. We can check on the paper if this is the case."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -298,6 +357,186 @@
    "source": [
     "Importantly this contains a date in `date` and subject information in `animal`.\n",
     "Surprisingly, this does not seem to contain any large vector as I expected"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 8 maze task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamps = mat_file[\"behavior\"][\"timestamps\"]\n",
+    "position = mat_file[\"behavior\"][\"position\"]\n",
+    "lin = position[\"lin\"]\n",
+    "x = position[\"x\"]\n",
+    "y = position[\"y\"]\n",
+    "\n",
+    "timestamps.shape, lin.shape, x.shape, y.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting the figure looks like and 8 maze with the dimensions that match the 60 x 60 cm in the paper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamps[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The attributes on maps though seems to map the times to something else. I am not sure yet what"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file[\"behavior\"][\"maps\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file[\"behavior\"][\"maps\"][1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importantly the timestamps do not start at 0. We need to figure this out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(timestamps, lin)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think this is the trajectory looked as linearly, as that matches with the lenght of the task 205 as described in the paper."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials = mat_file[\"behavior\"][\"trials\"]\n",
+    "trials['choice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials[\"trial_ints\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials[\"endDelay\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials[\"startPoint\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials[\"recorings\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "events = mat_file[\"behavior\"][\"events\"]\n",
+    "events.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "events[\"rReward\"]"
    ]
   },
   {
