--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
@@ -56,8 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_root = Path(\"/Volumes/neurodata/buzaki/HuszarR\")\n",
-    "session_path = Path(project_root, \"optotagCA1/e13/e13_16f1/e13_16f1_210302\")\n",
+    "project_root = Path(\"/home/heberto/buzaki/\")\n",
+    "# project_root = Path(\"/Volumes/neurodata/buzaki/HuszarR\")\n",
+    "\n",
+    "session_path = project_root /  \"optotagCA1/e13/e13_16f1/e13_16f1_210302\"\n",
+    "assert session_path.is_dir()\n",
     "\n",
     "# Dump to a file in the same folder\n",
     "json_directory = Path.cwd() / \"_json_files\"\n",
@@ -600,7 +603,7 @@
    "outputs": [],
    "source": [
     "file_path = session_files_path_list[0]\n",
-    "file_path = file_path.parent / \"chanMap.mat'\"\n",
+    "file_path = file_path.parent / \"chanMap.mat\"\n",
     "file_path.is_file()\n"
    ]
   },
@@ -613,6 +616,35 @@
     "# Write this to a file for visualization\n",
     "with open(json_directory / 'chanMap.json', 'w') as f:\n",
     "    f.write(json.dumps(build_keys_and_types(mat_file), indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file = loadmat_scipy(file_path, simplify_cells=True)\n",
+    "\n",
+    "colors = {2: \"red\", 1: \"blue\", 3: \"green\", 4: \"yellow\"}\n",
+    "colors_for_k_cores = [colors[int(k)] for k in mat_file[\"kcoords\"]]\n",
+    "\n",
+    "plt.scatter(mat_file[\"xcoords\"][:], mat_file[\"ycoords\"][:], color=colors_for_k_cores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file[\"side\"]\n",
+    "colors_for_back = {\"Front\": \"red\", \"Back\": \"blue\"}\n",
+    "\n",
+    "colors_for_k_cores = [colors_for_back[k] for k in mat_file[\"side\"]]\n",
+    "\n",
+    "\n",
+    "plt.scatter(mat_file[\"xcoords\"][:], mat_file[\"ycoords\"][:], color=colors_for_k_cores)"
    ]
   },
   {
@@ -916,7 +948,7 @@
    "metadata": {},
    "source": [
     "## How to extract the sampling rate"
-]
+   ]
   },
   {
    "cell_type": "code",
@@ -939,8 +971,8 @@
     "\n",
     "sampling_rate = float(cell_info[\"sr\"][0][0][0][0])"
    ]
-},
-{
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1173,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
