--- a/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/huszar_hippocampus_dynamics/files_documentation.ipynb
@@ -56,8 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_root = Path(\"/home/heberto/buzaki/\")\n",
-    "# project_root = Path(\"/Volumes/neurodata/buzaki/HuszarR\")\n",
+    "# project_root = Path(\"/home/heberto/buzaki/\") # Heberto\n",
+    "# project_root = Path(\"/Volumes/neurodata/buzaki/HuszarR\") # Garrett\n",
+    "project_root = Path(\"/shared/catalystneuro/HuszarR\") # DANDI\n",
     "\n",
     "session_path = project_root /  \"optotagCA1/e13/e13_16f1/e13_16f1_210302\"\n",
     "assert session_path.is_dir()\n",
@@ -151,7 +152,9 @@
     "mat_file = loadmat_scipy(file_path, simplify_cells=True)\n",
     "# Iterate over the keys and print the type of the values\n",
     "for key in mat_file.keys():\n",
-    "    print(key, type(mat_file[key]))"
+    "    print(key, type(mat_file[key]))\n",
+    "\n",
+    "print(mat_file['SleepState']['idx']['timestamps'])"
    ]
   },
   {
@@ -418,6 +421,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -578,6 +582,15 @@
     "# Output to an external file\n",
     "with open(json_directory / 'riples.json', 'w') as f:\n",
     "    f.write(json.dumps(build_keys_and_types(mat_file), indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file['ripples']['timestamps']"
    ]
   },
   {
@@ -1191,21 +1204,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neuroconv_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
