--- a/buzsaki_lab_to_nwb/valero/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/valero/files_documentation.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x800 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import numpy as np\n",
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,9 +1845,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/heberto/miniconda3/envs/neuroconv_env/lib/python3.10/site-packages/pymatreader/utils.py:230: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
+      "  warn('Complex objects (like classes) are not supported. '\n"
+     ]
+    }
+   ],
    "source": [
     "file_path = session_path / f\"{session_path.stem}.HSE.mat\"\n",
     "assert file_path.is_file(), file_path\n",
@@ -1853,9 +1872,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['HSE'], dtype='<U3'), array([1], dtype=uint8), 3952, 3952)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hse_data = mat_file[\"HSE\"]\n",
     "start_time, stop_time = hse_data[\"timestamps\"][:, 0], hse_data[\"timestamps\"][:, 1] \n",
@@ -1869,9 +1899,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  6.81  ,  12.365 ,  12.789 ,  14.8345,  15.9645,  21.346 ,\n",
+       "        28.087 ,  35.8615,  37.531 ,  39.9335,  43.3225,  45.118 ,\n",
+       "        45.3245,  47.5805,  48.3395,  58.8215,  59.101 ,  66.89  ,\n",
+       "        81.6045,  84.6415,  99.5275, 103.814 , 112.7415, 116.454 ,\n",
+       "       117.4325])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "center[:25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  6.716,  12.354,  12.791,  14.878,  15.987,  21.357,  28.092,\n",
+       "        35.875,  37.499,  40.02 ,  43.311,  45.064,  45.353,  47.574,\n",
+       "        48.391,  58.83 ,  59.104,  66.911,  81.608,  84.518,  99.583,\n",
+       "       103.83 , 112.749, 116.465, 117.459])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "peaks[:25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 6.679, 12.277, 12.739, 14.751, 15.903]),\n",
+       " array([ 6.941, 12.453, 12.839, 14.918, 16.026]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "start_time[:5], stop_time[:5]"
    ]
@@ -2495,11 +2584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = session_path / f\"{session_path.stem}.session.mat\"\n",
+    "session_path_here = project_root /  \"fCamk1_200827_sess9\"\n",
+    "session_path_here = project_root / \"fCamk2\" / \"fCamk2_201012_sess1\"\n",
+    "session_path_here = project_root / \"fCamk3_201030_sess12\"\n",
+    "file_path = session_path_here / f\"{session_path_here.stem}.session.mat\"\n",
     "assert file_path.is_file(), file_path\n",
     "\n",
     "mat_file = read_mat(file_path)\n",
@@ -2508,9 +2600,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/heberto/buzaki/fCamk3_201030_sess12')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session_path_here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fCamk3_201030_094008': {'file_path': PosixPath('/home/heberto/buzaki/fCamk3_201030_sess12/fCamk3_201030_094008/Basler_acA1280-60gc__21606137__20201030_094038065.avi'),\n",
+       "  'start_time': 5940.64},\n",
+       " 'fCamk3_201030_135409': {'file_path': PosixPath('/home/heberto/buzaki/fCamk3_201030_sess12/fCamk3_201030_135409/Basler_acA1280-60gc__21606137__20201030_135451101.avi'),\n",
+       "  'start_time': 20515.872}}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session_path = session_path_here\n",
+    "name_of_folders = [session_path / f\"{epoch['name']}\" for epoch in epoch_list]\n",
+    "start_times = [epoch['startTime'] for epoch in epoch_list]\n",
+    "assert all([folder.is_dir() for folder in name_of_folders])\n",
+    "\n",
+    "# For each of the folder in name_of_folders look for the .avi file and \n",
+    "# This can't be done with a rglob because some sessions like `fCamk3_201030_sess12` contain sub-nested sessions.\n",
+    "epoch_to_video_info = {}\n",
+    "for folder, start_time in zip(name_of_folders, start_times):\n",
+    "    video_file_paths = list(folder.glob(\"*.avi\"))\n",
+    "    assert len(video_file_paths) <= 1, \"There should be only one .avi file in each epoch folder\"\n",
+    "    if len(video_file_paths) == 1:\n",
+    "        epoch_to_video_info[folder.name] = dict(file_path=video_file_paths[0], start_time=start_time)\n",
+    "        \n",
+    "epoch_to_video_info\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2016-03-15'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_file[\"session\"][\"general\"][\"date\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.291324435185185"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "pd.options.display.float_format = '{:,.2f}'.format\n",
@@ -2529,13 +2710,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| name                 |   startTime |   stopTime |   duration_seconds |   duration_hours |\n",
+      "|:---------------------|------------:|-----------:|-------------------:|-----------------:|\n",
+      "| fCamk2_201012_090020 |        0    |    3794.69 |           3794.69  |         1.05408  |\n",
+      "| fCamk2_201012_115808 |     3794.69 |    6988.77 |           3194.08  |         0.887244 |\n",
+      "| fCamk2_201012_130347 |     6988.77 |    9449.44 |           2460.67  |         0.68352  |\n",
+      "| fCamk2_201012_134511 |     9449.44 |   10273.7  |            824.224 |         0.228951 |\n",
+      "| fCamk2_201012_140000 |    10273.7  |   11848.8  |           1575.1   |         0.437529 |\n"
+     ]
+    }
+   ],
    "source": [
     "epoch_df[\"duration_seconds\"] = (epoch_df.stopTime - epoch_df.startTime)\n",
     "epoch_df[\"duration_hours\"] = epoch_df.duration_seconds / (3600)\n",
-    "epoch_df"
+    "print(epoch_df.to_markdown(index=False))"
    ]
   },
   {
