--- a/buzsaki_lab_to_nwb/valero/widget_demostration.ipynb
+++ b/buzsaki_lab_to_nwb/valero/widget_demostration.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -16,18 +18,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "output_dir_path = Path.home() / \"conversion_nwb\"\n",
     "stub_path_list = list((output_dir_path / \"nwb_stub\").iterdir())\n",
-    "nwbfile_path = stub_path_list[0]\n"
+    "nwbfile_path = stub_path_list[1]\n",
+    "print(nwbfile_path)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "io = NWBHDF5IO(str(nwbfile_path), mode='r', load_namespaces=True)\n",
@@ -39,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
