--- a/buzsaki_lab_to_nwb/valero/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/valero/files_documentation.ipynb
@@ -23,6 +23,7 @@
     "\n",
     "project_root = Path(\"/home/heberto/buzaki\")\n",
     "session_path = project_root /  \"fCamk1_200827_sess9\"\n",
+    "session_path = Path(\"/media/heberto/One Touch/Buzsaki/ValeroM/fCamk1/fCamk1_200827_sess9\")\n",
     "assert session_path.is_dir()\n",
     "\n",
     "session_files_path_list = list(session_path.iterdir())\n",
@@ -1260,6 +1261,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "interface.recording_extractor._main_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface.recording_extractor.get_channel_gains()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface.recording_extractor.get_channel_offsets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface.recording_extractor.get_property_keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"parent_recording\" in interface.recording_extractor._kwargs:\n",
+    "    parent_recording = interface.recording_extractor._kwargs[\"parent_recording\"]\n",
+    "    parent_recording.get_channel_ids()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interface.recording_extractor.get_property(\"group_name\")"
    ]
   },
@@ -1285,6 +1334,24 @@
     "\n",
     "# Small test to see if traces are layed out as I expect\n",
     "np.testing.assert_allclose(small_trace, small_trace_no_channels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface.recording_extractor.ids_to_indices(ids=channel_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_ids"
    ]
   },
   {
@@ -1329,43 +1396,10 @@
     "channel_ids_in_matlab_str = [str(channel_ids_in_matlab[i]) for i in channel_ids_in_matlab]\n",
     "locations = np.array([mat_file[\"xcoords\"], mat_file[\"ycoords\"]]).T\n",
     "recording_extractor.set_channel_locations(channel_ids=channel_ids_in_matlab_str, locations=locations)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recording_extractor.set_property(key=\"brain_area\", values=[\"CA1\"] * recording_extractor.get_num_channels())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recording_extractor.get_property(\"brain_area\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recording_extractor.get_property_keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recording_extractor.get_property(\"group_name\")"
+    "recording_extractor.set_property(key=\"brain_area\", values=[\"CA1\"] * recording_extractor.get_num_channels())\n",
+    "# recording_extractor.get_property(\"brain_area\")\n",
+    "# recording_extractor.get_property_keys()\n",
+    "# recording_extractor.get_property(\"group_name\")"
    ]
   },
   {
@@ -4708,11 +4742,12 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Check NWB result"
+    "signal_groups[0]"
    ]
   },
   {
@@ -4721,19 +4756,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "output_dir_path = Path.home() / \"conversion_nwb\"\n",
+    "file_path = session_files_path_list[0]\n",
+    "file_path = session_path / f\"{session_path.stem}.session.mat\"\n",
+    "assert file_path.is_file(), file_path\n",
     "\n",
-    "stub_path_list = list((output_dir_path / \"nwb_stub\").iterdir())\n",
+    "mat_file = read_mat(file_path) \n",
+    "time_series = mat_file[\"session\"][\"timeSeries\"]\n",
+    "time_series.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digital_in = time_series[\"dig\"]\n",
+    "file_path = session_path / digital_in[\"fileName\"]\n",
+    "dtype = digital_in[\"precision\"]\n",
+    "num_channels = digital_in[\"nChannels\"]\n",
+    "sampling_rate = digital_in[\"sr\"]\n",
+    "nSamples = digital_in[\"nSamples\"]\n",
     "\n",
-    "file_path = stub_path_list[0]\n",
+    "print(f\"file_path here {file_path.name}\")\n",
+    "print(f\"Number of channels {num_channels}\")\n",
+    "print(f\"Sampling rate {sampling_rate:,.2f}\")\n",
+    "data = np.memmap(file_path, dtype=dtype, mode=\"r\").reshape(-1, num_channels)\n",
+    "data.shape, nSamples // num_channels, data.shape[0] / (sampling_rate * 3600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_start_hours = 1.0 \n",
+    "time_end_hours = 1.001\n",
+    "time_start_seconds = time_start_hours * 3600\n",
+    "time_stop_seconds = time_end_hours * 3600\n",
+    "time_start_sample = int(time_start_seconds * 3600)\n",
+    "time_stop_sample = int(time_stop_seconds * 3600)\n",
+    "time = np.linspace(time_start_hours, time_end_hours, time_stop_sample - time_start_sample) \n",
     "\n",
-    "import pynwb \n",
+    "channel = 0 \n",
+    "plt.plot(time, data[time_start_sample:time_stop_sample, channel])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "digital_in = time_series[\"adc\"]\n",
+    "file_path = session_path / digital_in[\"fileName\"]\n",
+    "dtype = digital_in[\"precision\"]\n",
+    "num_channels = digital_in[\"nChannels\"]\n",
+    "sampling_rate = digital_in[\"sr\"]\n",
+    "nSamples = digital_in[\"nSamples\"]\n",
     "\n",
-    "# Open file with pynwb\n",
-    "io = pynwb.NWBHDF5IO(str(file_path), mode='r', load_namespaces=True)\n",
-    "nwbfile = io.read()\n",
-    "nwbfile\n"
+    "print(f\"file_path here {file_path.name}\")\n",
+    "print(f\"Number of channels {num_channels}\")\n",
+    "print(f\"Sampling rate {sampling_rate:,.2f}\")\n",
+    "data = np.memmap(file_path, dtype=dtype, mode=\"r\").reshape(-1, num_channels)\n",
+    "data.shape, nSamples // num_channels, data.shape[0] / (sampling_rate * 3600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs_list = mat_file[\"session\"][\"epochs\"]\n",
+    "{epoch[\"name\"]: epoch[\"startTime\"] for epoch in epochs_list}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_start_hours = 1.0 \n",
+    "time_end_hours = 1.001\n",
+    "time_start_seconds = time_start_hours * 3600\n",
+    "time_stop_seconds = time_end_hours * 3600\n",
+    "time_start_seconds = 8284.64 - 1\n",
+    "time_stop_seconds = 8284.64 + 1\n",
+    "time_start_sample = int(time_start_seconds * 3600)\n",
+    "time_stop_sample = int(time_stop_seconds * 3600)\n",
+    "time = np.linspace(time_start_seconds, time_stop_seconds, time_stop_sample - time_start_sample) \n",
+    "\n",
+    "channel = 0 \n",
+    "# Plot all the channels in a vertical grid as long as num_channels\n",
+    "for channel in range(num_channels):\n",
+    "    plt.subplot(num_channels, 1, channel + 1)\n",
+    "    plt.plot(time, data[time_start_sample:time_stop_sample, channel])\n"
    ]
   },
   {
@@ -4749,11 +4869,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe = nwbfile.electrodes.to_dataframe()\n",
-    "import pandas as pd\n",
-    "# Show all the entries of the dataframe\n",
-    "with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
-    "    print(dataframe)"
+    "file_path = session_path / \"digitalin.dat\"\n",
+    "num_channels = 16\n",
+    "dtype = np.uint\n",
+    "# dtype = \"int16\"\n",
+    "data = np.memmap(file_path, dtype=dtype, mode='r').reshape(-1, num_channels)\n",
+    "sampling_rate = 30_000.0 / 4\n",
+    "data.shape[0] / (sampling_rate * 3600)"
    ]
   },
   {
@@ -4762,7 +4884,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe[dataframe.channel_name == \"ch9grp3\"]"
+    "plt.plot(data[:, 14])"
    ]
   },
   {
@@ -4771,34 +4893,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nwbfile.acquisition['Video: Basler_acA1280-60gc__21606137__20200827_110730202']"
+    "signal_names = [\"digitalin.dat\", \"time.dat\", \"supply.dat\", \"auxiliary.dat\", \"analogin.dat\"]\n",
+    "\n",
+    "\n",
+    "for name in signal_names:\n",
+    "    file_path = session_path / f\"{name}\" \n",
+    "    assert file_path.is_file(), file_path\n",
+    "\n",
+    "    sig_dtype = 'int16' if nbits <= 16 else 'int32'\n",
+    "    data = np.memmap(file_path, dtype=sig_dtype, mode='r', offset=0).reshape(-1,    )\n",
+    "    time = data.shape[0] / sampling_rate\n",
+    "    num_samples = data.shape[0]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lfp_module = nwbfile.processing[\"ecephys\"][\"LFP\"]\n",
-    "lfp_module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lfp_module[\"ElectricalSeriesLF\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
